Fix footer in dark mode

--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -13,8 +13,12 @@
   --color-gray-1: #B6B6B1;
   --color-about-bg-light: hsla(54deg, 49%, 79%, 20%);
   --color-about-bg-dark: hsla(159deg, 17%, 35%, 20%);
+  --color-dark-text-opacity: hsla(60deg, 3%, 6%, 20%);
+  --color-light-text-opacity: hsla(0deg, 0%, 98%, 20%);
+
   --color-text: light-dark(var(--color-dark-text), var(--color-light-text));
   --color-bg: light-dark(var(--color-light-bg), var(--color-dark-bg));
   --color-hover-text: light-dark(var(--color-dark-accent), var(--color-light-accent));
   --color-about-bg: light-dark(var(--color-about-bg-light), var(--color-about-bg-dark));
+  --color-text-opacity: light-dark(var(--color-dark-text-opacity), var(--color-light-text-opacity));
 }
